[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/texture/gray.png" type="Texture" id=1]
[ext_resource path="res://gui/root/root.gd" type="Script" id=2]
[ext_resource path="res://gui/fps_counter/fps_counter.tscn" type="PackedScene" id=3]

[node name="root" type="CanvasLayer"]
script = ExtResource( 2 )
main_vp_width = 640
main_vp_height = 320

[node name="display_container" type="ViewportContainer" parent="."]
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_viewport" type="Viewport" parent="display_container"]
size = Vector2( 1, 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="background" type="TextureRect" parent="display_container/main_viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_container" type="ViewportContainer" parent="display_container/main_viewport"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
stretch = true

[node name="game_viewport" type="Viewport" parent="display_container/main_viewport/game_container"]
size = Vector2( 1, 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="fps_counter" parent="display_container/main_viewport/game_container" instance=ExtResource( 3 )]
